--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,14 +1,22 @@
 ---
+import Hero from 'src/ui-components/Hero.astro';
 import BaseLayout from '../layouts/BaseLayout.astro';
+import { sharpImageService } from 'astro/config';
 ---
 
 <BaseLayout>
-  <h1>🧑‍🚀 Hello, Astronaut!</h1>
-  <p>
-    Welcome to the official <a href="https://astro.build/">Astro</a> blog starter
-    template. This template serves as a lightweight, minimally-styled starting point
-    for anyone looking to build a personal website, blog, or portfolio with Astro.
-  </p>
+  <Hero
+    heading="Give your home new life"
+    contentLocation="left"
+    topper="hardwood flooring experts"
+    image={{
+      src: '../../public/new-vista-digital-starterkit.jpg',
+      alt: 'nice',
+      location: 'side',
+    }}
+  >
+    This is the new text
+  </Hero>
   <p>
     This template comes with a few integrations already configured in your
     <code>astro.config.mjs</code> file. You can customize your setup with
