--- a/src/components/site/Header.astro
+++ b/src/components/site/Header.astro
@@ -1,14 +1,33 @@
 ---
 import NavLink from '../../components/ui/NavLink.astro';
-import { SITE_TITLE } from '../../consts';
 import DarkModeToggle from '../../components/ui/DarkModeToggle.astro';
+import { Image } from 'astro:assets';
+
+// Content
+import { SITE_TITLE } from '../../consts';
+import logo from '../../assets/images/logo.svg';
+import logoDark from '../../assets/images/logo-white.svg';
+
+const image = {
+  href: '../../assets/images/logo.svg',
+  alt: '',
+};
 ---
 
 <header>
   <nav>
-    <h2><a href="/">{SITE_TITLE}</a></h2>
+    <h2>
+      <a href="/" aria-label="homepage" data-navLink>
+        <Image src={logo} alt={SITE_TITLE} class="h-8 dark:hidden" />
+        <Image
+          src={logoDark}
+          alt={SITE_TITLE}
+          class="hidden h-8 dark:block"
+        /></a
+      >
+    </h2>
     <div class="internal-links">
-      <NavLink href="/" data-navLink>Home</NavLink>
+      <NavLink href="/">Home</NavLink>
       <NavLink href="/blog" data-navLink>Blog</NavLink>
       <NavLink href="/about" data-navLink>About</NavLink>
       <DarkModeToggle />
