--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -10,7 +10,9 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
   <head>
     <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
   </head>
-  <body class="bg-white p-4 dark:bg-slate-900 dark:text-white text-slate-900">
+  <body
+    class="bg-stone-100 text-stone-900 dark:bg-stone-900 dark:text-stone-100"
+  >
     <a href="#main-content" class="sr-only">Skip to content</a>
     <Header />
     <main id="#main-content">
