--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -17,7 +17,7 @@
 
 @layer components {
   .btn {
-    @apply font-medium text-center text-base transition py-3 px-6 md:px-8 ease-in duration-200 focus:ring-blue-500 focus:ring-offset-blue-200 focus:ring-2 focus:ring-offset-2 cursor-pointer;
+    @apply inline-block font-medium text-center text-base transition py-3 px-6 md:px-8 ease-in duration-200 focus:ring-blue-500 focus:ring-offset-blue-200 focus:ring-2 focus:ring-offset-2 cursor-pointer;
   }
 
   .btn-primary {
