--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -17,11 +17,11 @@
 
 @layer components {
   .btn {
-    @apply inline-block font-medium text-center text-base transition py-3 px-6 md:px-8 ease-in duration-200 cursor-pointer focus:outline-offset-4 focus:outline-4 focus:outline-amber-700;
+    @apply inline-block font-medium text-center text-base transition py-4 px-6 md:px-8 ease-in duration-200 cursor-pointer focus:outline-offset-4 focus:outline-4 focus:outline-amber-700;
   }
 
   .btn-primary {
-    @apply btn font-semibold bg-primary text-white hover:bg-secondary hover:text-white dark:text-white dark:bg-primary dark:hover:bg-secondary bg-gradient-to-br from-amber-600 to-red-800 hover:from-amber-700 hover:to-orange-900 active:bg-gradient-to-bl;
+    @apply btn font-semibold bg-primary text-white hover:bg-secondary hover:text-white dark:text-white dark:bg-primary dark:hover:bg-secondary bg-gradient-to-br from-orange-600 to-red-800 hover:from-red-700 hover:to-red-950 active:bg-gradient-to-bl;
   }
 
   .btn-secondary {
