--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,11 @@
 ---
 import Button from '@components/ui/Button.astro';
 import BaseLayout from '../layouts/BaseLayout.astro';
+import Hero from '../components/content/HeroHome.astro';
 ---
 
 <BaseLayout>
+  <Hero />
   <section class="bg-stone-300 dark:bg-stone-800 py-40 mx-10 px-10 rounded-md">
     <span data-type="topper">Quality & Affordability</span>
     <h1>Quality Hardwood Floor Installations & Repairs</h1>
