Add about. TODO: add gallery

--- a/src/components/content/HeroHome.astro
+++ b/src/components/content/HeroHome.astro
@@ -11,10 +11,7 @@ const optimizedBackgroundImage = await getImage({ src: myImage })
         <p class="mb-8 text-lg font-normal text-stone-900 lg:text-xl sm:px-16 xl:px-48 dark:text-stone-400">Here at Avalanche Hardwood Floors we focus on quality and trust. Give us a call for a free, no pressure estimate to help get you pointed in the right direction.</p>
         <div class="mb-8 lg:mb-16 space-y-4 sm:flex-row sm:justify-center sm:space-y-0 sm:space-x-4">
             <Button text="Get a quote" classes="btn-primary" href='/contact' icon={{name: "tabler:arrow-right", side: "right"}} ></Button>
-            <a href="#" class="inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-stone-900 rounded-lg border border-stone-300 hover:bg-stone-100 focus:ring-4 focus:ring-stone-100 dark:text-white dark:border-stone-700 dark:hover:bg-stone-700 dark:focus:ring-stone-800">
-                <svg class="mr-2 -ml-1 w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M2 6a2 2 0 012-2h6a2 2 0 012 2v8a2 2 0 01-2 2H4a2 2 0 01-2-2V6zM14.553 7.106A1 1 0 0014 8v4a1 1 0 00.553.894l2 1A1 1 0 0018 13V7a1 1 0 00-1.447-.894l-2 1z"></path></svg>
-                Watch video
-            </a>  
+            <Button text="View projects" classes="btn-secondary" href='/gallery' ></Button>
         </div>
     </div>
 </section>
