--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -17,7 +17,7 @@
 
 @layer components {
   .btn {
-    @apply inline-block font-medium text-center text-base transition py-4 px-6 md:px-8 ease-in duration-200 cursor-pointer focus:outline-offset-4 focus:outline-4 focus:outline-amber-700;
+    @apply inline-flex justify-center items-center font-medium text-center text-base transition py-4 px-6 md:px-8 ease-in duration-200 cursor-pointer focus:outline-offset-4 focus:outline-4 focus:outline-amber-700;
   }
 
   .btn-primary {
@@ -25,7 +25,7 @@
   }
 
   .btn-secondary {
-    @apply btn;
+    @apply btn text-base font-medium text-center text-stone-900 border-2 border-stone-500 hover:bg-stone-300 focus:ring-4 focus:ring-stone-100 dark:text-white dark:border-stone-700 dark:hover:bg-stone-700 dark:focus:ring-stone-800;
   }
 
   .btn-tertiary {
