--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -11,7 +11,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
     <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
   </head>
   <body
-    class="bg-stone-100 text-stone-900 dark:bg-stone-900 dark:text-stone-100"
+    class="bg-stone-100 text-stone-900 dark:bg-stone-900 dark:text-stone-100 transition-colors"
   >
     <a href="#main-content" class="sr-only">Skip to content</a>
     <Header />
