--- a/src/components/content/HomeAbout.astro
+++ b/src/components/content/HomeAbout.astro
@@ -2,7 +2,8 @@
 import Button from "@components/ui/Button.astro"
 import { Image } from "astro:assets"
 ---
-<section class="container mx-auto px-10 my-20 flex">
+<section class="dark:bg-stone-950 py-12">
+  <div class="container mx-auto px-10 my-20 flex">
   <div class="w-1/2">
     <h3 class="text-xl font-extrabold">About us</h3>
     <h2 class="text-4xl font-bold">We’ve been working in the industry for 20 years</h2>
@@ -12,4 +13,5 @@ import { Image } from "astro:assets"
   </div>
   <div clas="grid">
   </div>
+</div>
 </section>
