--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -4,7 +4,7 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 
 <BaseLayout>
   <article class="container mx-auto lg:px-16">
-    <h1>About us</h1>
+    <h1>Our Services</h1>
   <p>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
     tempor incididunt ut labore et dolore magna aliqua. Vitae ultricies leo
