update footer and CTA

--- a/src/components/site/Footer.astro
+++ b/src/components/site/Footer.astro
@@ -20,25 +20,19 @@ import { Image } from 'astro:assets';
       <p class="my-6 text-stone-100 dark:text-gray-400">Your trusted hardwood floor experts serving Colorado Springs, Monument, Fountain, Pueblo, and the entire front range.</p>
       <ul class="flex flex-wrap justify-center items-center mb-6 text-stone-200 dark:text-white">
           <li>
-              <a href="#" class="mr-4 hover:underline md:mr-6 ">About</a>
+              <a href="/" class="mr-4 hover:underline md:mr-6 ">Home</a>
           </li>
           <li>
-              <a href="#" class="mr-4 hover:underline md:mr-6">Premium</a>
+              <a href="/about" class="mr-4 hover:underline md:mr-6">About Us</a>
           </li>
           <li>
-              <a href="#" class="mr-4 hover:underline md:mr-6 ">Campaigns</a>
+              <a href="/services" class="mr-4 hover:underline md:mr-6 ">Our Services</a>
           </li>
           <li>
-              <a href="#" class="mr-4 hover:underline md:mr-6">Blog</a>
+              <a href="/gallery" class="mr-4 hover:underline md:mr-6">Gallery</a>
           </li>
           <li>
-              <a href="#" class="mr-4 hover:underline md:mr-6">Affiliate Program</a>
-          </li>
-          <li>
-              <a href="#" class="mr-4 hover:underline md:mr-6">FAQs</a>
-          </li>
-          <li>
-              <a href="#" class="mr-4 hover:underline md:mr-6">Contact</a>
+              <a href="/contact" class="mr-4 hover:underline md:mr-6">Contact us</a>
           </li>
       </ul>
       <span class="text-sm text-stone-300 sm:text-center dark:text-gray-400">
