--- a/src/components/ui/Button.astro
+++ b/src/components/ui/Button.astro
@@ -30,9 +30,8 @@ const {
 <a
   href={href}
   class:list={[
-    'btn',
     classes,
-    style,
+    'btn-' + style,
     { filled: isFilled, bordered: borderVisible },
   ]}
   {...rest}
