--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,23 +3,15 @@
 import BaseLayout from '../layouts/BaseLayout.astro';
 
 // Components
-import Button from '@components/ui/Button.astro';
 import Hero from '../components/content/HomeHero.astro';
 import About from '../components/content/HomeAbout.astro';
 import Services from '../components/content/HomeServices2.astro';
+import CTA from '../components/ui/CallToAction.astro';
 ---
 
 <BaseLayout>
   <Hero />
   <About />
   <Services />
-  <section class="bg-stone-300 dark:bg-stone-800 py-40 mx-10 px-10 rounded-md">
-    <span data-type="topper">Quality & Affordability</span>
-    <h1>Quality Hardwood Floor Installations & Repairs</h1>
-    <p>
-      We've been among the best hardwood floor companies in Colorado Springs for
-      over 20 years!
-    </p>
-    <Button text="Get a quote" classes="btn-primary" href='/contact' icon={{name: "tabler:arrow-right", side: "right"}} ></Button>
-  </section>
+  <CTA />
 </BaseLayout>
