--- a/src/pages/gallery.astro
+++ b/src/pages/gallery.astro
@@ -3,7 +3,7 @@
 import BaseLayout from '../layouts/BaseLayout.astro';
 
 // Content
-import Gallery from '../components/content/Gallery.astro'
+import ImageGallery from '../components/content/Gallery.astro'
 import CTA from '../components/ui/CallToAction.astro'
 ---
 
@@ -11,7 +11,7 @@ import CTA from '../components/ui/CallToAction.astro'
   <article class="container mx-auto lg:px-16">
     <h1>Our projects</h1>
     <p>Below are just a few images from jobs we've done. These include hardwood floor repairs, wood floor site sand and refinishes, fresh installs, and more.</p>
-    <Gallery />
+    <ImageGallery />
     <div class="text-center">
     <CTA class="-mb-16"/></div>
   </article>
