--- a/src/components/site/Header.astro
+++ b/src/components/site/Header.astro
@@ -5,28 +5,18 @@ import { Image } from 'astro:assets';
 
 // Content
 import { SITE_TITLE } from '../../consts';
-import logo from '../../assets/images/logo.svg';
-import logoDark from '../../assets/images/logo-white.svg';
+import logo from '../../assets/images/logo.svg?raw';
+import logoDark from '../../assets/images/logo-white.svg?raw';
 ---
 
 <header>
   <Alert />
   <nav class="container mx-auto my-6 flex justify-between px-5">
     <div class="mr-auto">
-      <a href="/" aria-label="homepage" data-navLink>
-        <Image
-				src={logo}
-				alt={SITE_TITLE}
-				class="inline h-8 pr-6 w-auto dark:hidden"
-				loading="eager"
-        />
-        <Image
-				src={logoDark}
-				alt={SITE_TITLE}
-				class="hidden h-8 pr-6 w-auto dark:inline"
-        /></a
-				loading="eager"
-      >
+      <a href="/" aria-label="homepage" class="inline-block h-auto align-middle" data-navLink>
+        <span class="inline-block w-auto pr-6 h-8 dark:hidden"><Fragment set:html={logo}></span>
+        <span class="hidden w-auto pr-6 h-8 dark:inline-block"><Fragment set:html={logoDark}></span>
+        </a>
       <NavLink
         href="/"
         data-navLink
