fix: remove ?raw from logo

--- a/src/components/site/Header.astro
+++ b/src/components/site/Header.astro
@@ -6,7 +6,7 @@ import { Image } from 'astro:assets';
 // Content
 import { SITE_TITLE } from '../../consts';
 import logo from '../../assets/images/logo.svg';
-import logoDark from '../../assets/images/logo-white.svg?raw';
+import logoDark from '../../assets/images/logo-white.svg';
 ---
 
 <header>
