update about and cta responsiveness

--- a/src/components/ui/CallToAction.astro
+++ b/src/components/ui/CallToAction.astro
@@ -2,7 +2,7 @@
 import Button from '../../components/ui/Button.astro'
 ---
 <div class="text-center">
-<section class="bg-white shadow-xl dark:shadow-red-800/25 dark:bg-red-950 -mb-20 rounded-3xl mt-12 z-10 inline-block">
+<section class="max-lg:container bg-white shadow-xl dark:shadow-red-800/25 dark:bg-red-950 lg:-mb-20 rounded-3xl mt-12 z-10 inline-block">
   <div class="py-8 px-4 mx-auto max-w-screen-xl sm:py-16 lg:px-6">
     <div class="max-w-screen-md text-center">
       <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-stone-900 dark:text-white">Let's find more that brings us together.</h2>
