fix: netlify attribute not read on form. change to data-netlify

--- a/src/components/ui/Form.astro
+++ b/src/components/ui/Form.astro
@@ -5,7 +5,7 @@
   <div class="py-8 lg:py-16 px-4 mx-auto max-w-screen-md">
       <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-center text-stone-900 dark:text-white">Contact Us</h2>
       <p class="mb-8 lg:mb-16 font-light text-center text-stone-500 dark:text-stone-400 sm:text-xl">Got a technical issue? Want to send feedback about a beta feature? Need details about our Business plan? Let us know.</p>
-      <form action="#" class="space-y-8" name="contact" netlify>
+      <form action="#" class="space-y-8" name="contact" data-netlify="true">
           <div>
               <label for="email" class="block mb-2 text-sm font-medium text-stone-900 dark:text-stone-300">Your email</label>
               <input type="email" id="email" class="shadow-sm bg-stone-50 border border-stone-300 text-stone-900 text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-stone-700 dark:border-stone-600 dark:placeholder-stone-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500 dark:shadow-sm-light" placeholder="you@gmail.com" required>
