feat: add tailwind prose. Write about page

--- a/src/components/site/Footer.astro
+++ b/src/components/site/Footer.astro
@@ -1,5 +1,7 @@
 ---
+// Data
 import { SITE_TITLE, SITE_UTM_SOURCE } from '../../consts';
+
 // Content
 import  logo  from "../../assets/images/logo-white.svg";
 const today = new Date();
