--- a/src/components/site/BaseHead.astro
+++ b/src/components/site/BaseHead.astro
@@ -1,11 +1,8 @@
 ---
-// Import the global.css file here so that it is included on
-// all pages through the use of the <BaseHead /> component.
-
 // Built-in CSS styles.
 import '../../assets/tailwind.css';
 
-// Site information
+// Data
 import { SITE_TITLE, SITE_DEFAULT_IMAGE } from '../../consts';
 
 interface Props {
