--- a/src/components/site/Header.astro
+++ b/src/components/site/Header.astro
@@ -1,10 +1,9 @@
 ---
+// Components
 import NavLink from '../../components/ui/NavLink.astro';
 import Alert from '../../components/ui/Alert.astro';
-import { Image } from 'astro:assets';
 
 // Content
-import { SITE_TITLE } from '../../consts';
 import logo from '../../assets/images/logo.svg?raw';
 import logoDark from '../../assets/images/logo-white.svg?raw';
 ---
