--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,7 +1,10 @@
 ---
+// Layout
 import BaseHead from '../components/site/BaseHead.astro';
 import Header from '../components/site/Header.astro';
 import Footer from '../components/site/Footer.astro';
+
+// Data
 import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 ---
 
