--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,70 +1,23 @@
 ---
+// Layout
 import BaseLayout from '../layouts/BaseLayout.astro';
+
+// Components
+import CTA from "../components/ui/CallToAction.astro"
 ---
 
 <BaseLayout>
-  <article class="container mx-auto lg:px-16">
-    <h1>About us</h1>
-  <p>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-    tempor incididunt ut labore et dolore magna aliqua. Vitae ultricies leo
-    integer malesuada nunc vel risus commodo viverra. Adipiscing enim eu turpis
-    egestas pretium. Euismod elementum nisi quis eleifend quam adipiscing. In
-    hac habitasse platea dictumst vestibulum. Sagittis purus sit amet volutpat.
-    Netus et malesuada fames ac turpis egestas. Eget magna fermentum iaculis eu
-    non diam phasellus vestibulum lorem. Varius sit amet mattis vulputate enim.
-    Habitasse platea dictumst quisque sagittis. Integer quis auctor elit sed
-    vulputate mi. Dictumst quisque sagittis purus sit amet.
-  </p>
-
-  <p>
-    Morbi tristique senectus et netus. Id semper risus in hendrerit gravida
-    rutrum quisque non tellus. Habitasse platea dictumst quisque sagittis purus
-    sit amet. Tellus molestie nunc non blandit massa. Cursus vitae congue mauris
-    rhoncus. Accumsan tortor posuere ac ut. Fringilla urna porttitor rhoncus
-    dolor. Elit ullamcorper dignissim cras tincidunt lobortis. In cursus turpis
-    massa tincidunt dui ut ornare lectus. Integer feugiat scelerisque varius
-    morbi enim nunc. Bibendum neque egestas congue quisque egestas diam. Cras
-    ornare arcu dui vivamus arcu felis bibendum. Dignissim suspendisse in est
-    ante in nibh mauris. Sed tempus urna et pharetra pharetra massa massa
-    ultricies mi.
-  </p>
-
-  <p>
-    Mollis nunc sed id semper risus in. Convallis a cras semper auctor neque.
-    Diam sit amet nisl suscipit. Lacus viverra vitae congue eu consequat ac
-    felis donec. Egestas integer eget aliquet nibh praesent tristique magna sit
-    amet. Eget magna fermentum iaculis eu non diam. In vitae turpis massa sed
-    elementum. Tristique et egestas quis ipsum suspendisse ultrices. Eget lorem
-    dolor sed viverra ipsum. Vel turpis nunc eget lorem dolor sed viverra.
-    Posuere ac ut consequat semper viverra nam. Laoreet suspendisse interdum
-    consectetur libero id faucibus. Diam phasellus vestibulum lorem sed risus
-    ultricies tristique. Rhoncus dolor purus non enim praesent elementum
-    facilisis. Ultrices tincidunt arcu non sodales neque. Tempus egestas sed sed
-    risus pretium quam vulputate. Viverra suspendisse potenti nullam ac tortor
-    vitae purus faucibus ornare. Fringilla urna porttitor rhoncus dolor purus
-    non. Amet dictum sit amet justo donec enim.
-  </p>
-
-  <p>
-    Mattis ullamcorper velit sed ullamcorper morbi tincidunt. Tortor posuere ac
-    ut consequat semper viverra. Tellus mauris a diam maecenas sed enim ut sem
-    viverra. Venenatis urna cursus eget nunc scelerisque viverra mauris in. Arcu
-    ac tortor dignissim convallis aenean et tortor at. Curabitur gravida arcu ac
-    tortor dignissim convallis aenean et tortor. Egestas tellus rutrum tellus
-    pellentesque eu. Fusce ut placerat orci nulla pellentesque dignissim enim
-    sit amet. Ut enim blandit volutpat maecenas volutpat blandit aliquam etiam.
-    Id donec ultrices tincidunt arcu. Id cursus metus aliquam eleifend mi.
-  </p>
-
-  <p>
-    Tempus quam pellentesque nec nam aliquam sem. Risus at ultrices mi tempus
-    imperdiet. Id porta nibh venenatis cras sed felis eget velit. Ipsum a arcu
-    cursus vitae. Facilisis magna etiam tempor orci eu lobortis elementum.
-    Tincidunt dui ut ornare lectus sit. Quisque non tellus orci ac. Blandit
-    libero volutpat sed cras. Nec tincidunt praesent semper feugiat nibh sed
-    pulvinar proin gravida. Egestas integer eget aliquet nibh praesent tristique
-    magna.
-  </p>
+  <article class="container mx-auto prose prose-base lg:prose-xl prose-stone">
+    <h1>About Avalanche Hardwood Floors</h1>
+    <p>Where quality meets craftsmanship in the heart of Colorado Springs. For over two decades, we've been dedicated to honest, quality work at affordable prices. Founded by Rick Mutzebaugh, our journey began with a passion for woodwork and an opportunity to start a business to deliver quality and transparency where other companies in the industry were lacking.</p>
+    <blockquote class="text-2xl text-red-800 dark:text-red-600">With us, you're getting peace of mind.</blockquote>
+    <h2>Our Values</h2>
+    <p>At Avalanche Hardwood Floors, we pride ourselves on being more than just a flooring company. We're your partners in enhancing the beauty and value of your home or business. Our core values of friendliness, personability, and trustworthiness are woven into every interaction and project we undertake. When you choose us, <b>you're not just getting a service – you're getting peace of mind knowing the job is done right every time.</b></p>
+    <h2>Uncompromising Quality</h2>
+    <p>Quality is the cornerstone of everything we do. From the selection of premium materials to the meticulous attention to detail in every installation, sanding, refinishing, repair, or addition.</p>
+    <p>A contractor once hired us for a VIP and said, "treat this like it's your house." We said, "No - we will treat it like it's <i>not</i> our house." We give everyone the VIP treatment, whether it's a 10,000sf house in the Broadmoor, or a small repair in a condo. Everyone gets our best.</p>
+    <h2>Customer Satisfaction Guaranteed</h2>
+    <p>At Avalanche Hardwood Floors, your satisfaction is our top priority. We understand that investing in your home or business is a significant decision, which is why we go above and beyond to exceed your expectations. Should you ever encounter any issues, you can give the owner Rick a call and we'll do everything we can to make it right at no cost to you.</p>
   </article>
+  <CTA />
 </BaseLayout>
