--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,5 +1,8 @@
 ---
+// Layout
 import BaseLayout from '../layouts/BaseLayout.astro';
+
+// Content
 import About from '../components/content/HomeAbout.astro';
 import Form from '../components/ui/Form.astro';
 ---
