fix: add name attribute to form inputs

--- a/src/components/content/Gallery.astro
+++ b/src/components/content/Gallery.astro
@@ -2,9 +2,9 @@
 import { Image } from "astro:assets"
 
 // Content
-import repairBefore from "../../assets/images/repair-before.JPG";
-import repairDuring from "../../assets/images/repair-during.JPG";
-import repairAfter from "../../assets/images/repair-after.JPG";
+import repairBefore from "../../assets/images/repair-before.jpg";
+import repairDuring from "../../assets/images/repair-during.jpg";
+import repairAfter from "../../assets/images/repair-after.jpg";
 import stockKitchen from '../../assets/images/kitchen-1.jpg';
 import closeUp from '../../assets/images/close-up.jpg';
 import bigLiving from '../../assets/images/big-living.jpg';
