--- a/src/components/content/Gallery.astro
+++ b/src/components/content/Gallery.astro
@@ -1,12 +1,13 @@
 ---
+// Components
 import { Image } from 'astro:assets';
 
 // Content
-import repairB from "../../assets/images/repair-during.jpg";
-import repairC from "../../assets/images/repair-before.png";
+import bigLiving from '../../assets/images/big-living.jpg';
+import repairB from '../../assets/images/repair-during.jpg';
+import repairC from '../../assets/images/repair-before.png';
 import stockKitchen from '../../assets/images/kitchen-1.jpg';
 import closeUp from '../../assets/images/close-up.jpg';
-import bigLiving from '../../assets/images/big-living.jpg';
 ---
 <div class="grid grid-cols-2 md:grid-cols-4 gap-4 mt-16">
     <div class="grid gap-4">
