optimize image. Why did the jpg not work? We'll never know...

--- a/src/components/content/Gallery.astro
+++ b/src/components/content/Gallery.astro
@@ -13,7 +13,7 @@ import closeUp from '../../assets/images/close-up.jpg';
 <div class="grid grid-cols-2 md:grid-cols-4 gap-4 mt-16">
     <div class="grid gap-4">
         <div>
-            <Image src={bigLiving} alt="Repair before" width="410" class="h-auto max-w-full rounded-lg"/>
+            <Image src={repairA} alt="Repair before" width="410" class="h-auto max-w-full rounded-lg"/>
         </div>
         <div>
             <Image src={repairB} alt="Repair during" width="410" class="h-auto max-w-full rounded-lg"/>
@@ -24,7 +24,7 @@ import closeUp from '../../assets/images/close-up.jpg';
     </div>
     <div class="grid gap-4">
         <div>
-            <Image src={repairA} alt="Kitchen" width="410" class="h-auto max-w-full rounded-lg"/>
+            <Image src={bigLiving} alt="Kitchen" width="410" class="h-auto max-w-full rounded-lg"/>
         </div>
         <div>
             <Image src={stockKitchen} alt="Kitchen" width="410" class="h-auto max-w-full rounded-lg"/>
