fix: remove unused js. increase size of nav elements

--- a/src/components/site/Header.astro
+++ b/src/components/site/Header.astro
@@ -21,23 +21,23 @@ import logoDark from '../../assets/images/logo-white.svg?raw';
       <NavLink
         href="/"
         data-navLink
-        class="px-4 py-2 focus:ring-amber-700 outline-4 outline-amber-700 focus:ring-4 transition-colors hover:text-amber-700">Home</NavLink
+        class="px-4 py-2 text-xl focus:ring-amber-700 outline-4 outline-amber-700 focus:ring-4 transition-colors hover:text-amber-700">Home</NavLink
       >
       <NavLink
         href="/services"
         data-navLink
-        class="px-4 py-2 focus:ring-amber-700 outline-4 focus:ring-4 transition-colors hover:text-amber-700"
+        class="px-4 py-2 text-xl focus:ring-amber-700 outline-4 focus:ring-4 transition-colors hover:text-amber-700"
         >Services</NavLink
       >
       <NavLink
         href="/about"
         data-navLink
-        class="px-4 py-2 focus:ring-amber-700 outline-4 focus:ring-4 transition-colors hover:text-amber-700">About</NavLink
+        class="px-4 py-2 text-xl focus:ring-amber-700 outline-4 focus:ring-4 transition-colors hover:text-amber-700">About</NavLink
       >
       <NavLink
         href="/gallery"
         data-navLink
-        class="px-4 py-2 focus:ring-amber-700 outline-4 focus:ring-4 transition-colors hover:text-amber-700"
+        class="px-4 py-2 text-xl focus:ring-amber-700 outline-4 focus:ring-4 transition-colors hover:text-amber-700"
         >Gallery</NavLink
       >
     </div>
