--- a/src/components/ui/Alert.astro
+++ b/src/components/ui/Alert.astro
@@ -9,7 +9,7 @@ import DarkModeToggle from '../../components/ui/DarkModeToggle.astro';
     <span class="text-stone-500">Give us a call</span>
     <a
       href="tel:7194928134"
-      class="mr-auto px-3 text-stone-500 hover:text-amber-700">(719) 492-8134</a
+      class="mr-auto px-3 text-stone-500 dark:text-stone-300 hover:text-amber-700">(719) 492-8134</a
     >
     <DarkModeToggle />
   </div>
