fix: accessibility issues resolved

--- a/src/components/content/HomeAbout.astro
+++ b/src/components/content/HomeAbout.astro
@@ -4,8 +4,8 @@ import Button from "@components/ui/Button.astro"
 <section class="dark:bg-stone-950 py-12">
   <div class="container mx-auto px-10 my-20 sm:flex">
     <div class="sm:w-2/3">
-      <h3 class="text-xl font-extrabold">About us</h3>
-      <h2 class="text-4xl font-bold mb-6">We’ve been working in the industry for 20 years</h2>
+      <h2 class="text-xl font-extrabold">About us</h2>
+      <p class="text-4xl font-bold mb-6">We’ve been working in the industry for 20 years</p>
     </div>
     <div class="ml-auto">
       <Button text="About us" href="/about" classes="btn-secondary"></Button>
