--- a/src/components/ui/Alert.astro
+++ b/src/components/ui/Alert.astro
@@ -1,15 +1,15 @@
 ---
 // Components
 import DarkModeToggle from '../../components/ui/DarkModeToggle.astro';
-
+import { SITE_PHONE, SITE_PHONE_HREF } from 'src/consts';
 ---
 
 <div class="container mx-auto px-5 py-3">
   <div class="flex border-b border-b-stone-300 pb-3">
     <span class="text-stone-700">Give us a call</span>
     <a
-      href="tel:7194928134"
-      class="mr-auto px-3 text-stone-950 dark:text-stone-300 hover:text-amber-700">(719) 492-8134</a
+      href={SITE_PHONE_HREF}
+      class="mr-auto px-3 text-stone-950 dark:text-stone-300 hover:text-amber-700">{SITE_PHONE}</a
     >
     <DarkModeToggle />
   </div>
