--- a/src/components/ui/NavLink.astro
+++ b/src/components/ui/NavLink.astro
@@ -18,6 +18,6 @@ const isActive = href === pathname || href === '/' + subpath?.[0];
     text-decoration: none;
   }
   a.active {
-    font-weight: bolder;
+    color: #dc2626;
   }
 </style>
